<resources>
    <string name="app_name">Performance Control</string>
    <string name="tab_cpu_settings">CPU Speed</string>
    <string name="tab_cpu_profiles">CPU Profiles</string>
    <string name="tab_battery_info">Battery</string>
    <string name="tab_oom_settings">Memory Settings</string>
    <string name="tab_time_in_state">Time In State</string>
    <string name="tab_voltage_settings">Voltage Settings</string>
    <string name="tab_cpu_info">General Info</string>
    <string name="tab_disk_info">Disk Info</string>
    <string name="tab_tools">Tools</string>
    <string name="t_cpu_settings">CPU SPEED</string>
    <string name="t_battery_info">BATTERY</string>
    <string name="t_oom_settings">MEMORY SETTINGS</string>
    <string name="t_volt_settings">VOLTAGE SETTINGS</string>
    <string name="t_adv_settings">"ADVANCED SETTINGS"</string>
    <string name="t_time_in_state">"TIME IN STATE"</string>
    <string name="t_cpu_info">GENERAL INFO</string>
    <string name="t_disk_info">DISK INFO</string>
    <string name="t_wake_controls">WAKE CONTROLS</string>
    <string name="t_tools">TOOLS</string>
    <string name="menu_tab">Tabs</string>
    <string name="mt_refresh">Refresh</string>
    <string name="mt_app_settings">"App Settings"</string>
    <string name="mt_reset">Reset</string>
    <string name="mt_restore">Restore</string>
    <string name="mt_plus25">Increase by 25 mV</string>
    <string name="mt_minus25">Decrease by 25 mV</string>
    <string name="current_speed">Current Speed</string>
    <string name="current_max">Maximum speed: </string>
    <string name="current_min">Minimum speed: </string>
    <string name="governor">Governor</string>
    <string name="io">I/O Scheduler</string>
    <string name="sob">Apply automatically on boot</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cpu_info_list_header">Core Status</string>
    <string name="cpu_speed_header">Core Limits</string>
    <string name="other_settings_header">Other settings</string>
    <string name="core_offline">Offline</string>
    <string name="core">Core</string>
    <string name="prefcat_free_memory">FREE MEMORY</string>
    <string name="prefcat_tweaks">FAST CHARGE</string>
    <string name="prefcat_misc_short">MISC</string>
    <string name="prefcat_read_ahead">SD READ AHEAD</string>
    <string name="prefcat_vm_settings">DALVIK SETTINGS</string>
    <string name="dt_free_memory">Minfree Taskkiller</string>
    <string name="dt_read_ahead">SD Read Ahead</string>
    <string name="pt_free_memory">Free memory</string>
    <string name="ps_free_memory">Amount of RAM the minfree taskkiller will keep |
        Current: %s
    </string>
    <string name="ps_free_memory_boot">Apply the amount above at boot</string>
    <string name="pt_read_ahead">Storage read ahead</string>
    <string name="ps_read_ahead">Amount to read ahead on storage, in kb |
        Current: %s
    </string>
    <string name="ps_fast_charge_boot">Fast charge</string>
    <string name="fast_charge_warning">YOU WILL NOT BE ABLE TO CONNECT TO YOUR PC AFTER
        EACH REBOOT!\n\nWhile Fast Charge is ON, you can *only* charge your phone!
    </string>
    <string name="fast_charge_notification_title">Fast Charge is ON!</string>
    <string name="fast_charge_notification_message">Phone is in charge-only mode!</string>
    <string name="prefcat_force_highend_gfx">High-end Graphics</string>
    <string name="pref_force_highend_gfx_title">Force high-end graphics</string>
    <string name="pref_force_highend_gfx_summary">Enables high-end visual effects such as transparent status/navigation bar (requires reboot)</string>
    <string name="prefcat_oom">MINIMUM FREE MEMORY</string>
    <string name="title_foreground_app">Foreground applications</string>
    <string name="title_visible_app">Visible Applications</string>
    <string name="title_secondary_server">Secondary Server</string>
    <string name="title_hidden_app">Hidden Applications</string>
    <string name="title_content_providers">Content Providers</string>
    <string name="title_empty_app">Empty Applications</string>
    <string name="prefcat_oom_predefines">PRESETS</string>
    <string name="pt_oom">Minfree Taskkiller Presets</string>
    <string name="pt_verylight">Very Light (Kills rarely)</string>
    <string name="pt_light">Light</string>
    <string name="pt_medium">Medium</string>
    <string name="pt_aggressive">Aggressive</string>
    <string name="pt_veryaggressive">Very Aggressive (Kills often)</string>
    <string name="prefcat_user_proc">NOT KILLABLE USER PROCESSES</string>
    <string name="prefcat_sys_proc">NOT KILLABLE SYSTEM PROCESSES</string>
    <string name="pt_user_proc">Enable not killable user processes</string>
    <string name="pt_sys_proc">Enable not killable system processes</string>
    <string name="pt_user_names_proc">User Processes whitelist</string>
    <string name="pt_sys_names_proc">System Processes whitelist</string>
    <string name="ps_restore_boot">Restore above settings at boot</string>
    <string name="ps_user_proc">The list of user process names (comma separated)</string>
    <string name="ps_sys_proc">The list of system process names (comma separated)</string>
    <string name="no_proc">No packages</string>
    <string name="prefcat_bln">BACKLIGHT NOTIFICATION</string>
    <string name="pt_bln">Backlight Notification</string>
    <string name="blx_info">Battery Life eXtender feature\nAuthor Ezekeel</string>
    <string name="prefcat_blx">BATTERY LIFE EXTENDER</string>
    <string name="pt_blx_boot">Set on boot</string>
    <string name="ps_blx_boot">Apply the amount above at boot</string>
    <string name="blx_title">Charge limit:</string>
    <string name="dsync_info">Dynamic FSync feature\nAuthor Paul Reioux (faux123)</string>
    <string name="prefcat_dsync">DYNAMIC FSYNC</string>
    <string name="ps_dsync">Setting will be restored on reboot</string>
    <string name="pt_dsync">Dynamic Fsync</string>
    <string name="prefcat_bltimeout">BACKLIGHT TIMEOUT</string>
    <string name="ps_bltimeout">%s ms</string>
    <string name="bltimeout_title">Backlight timeout</string>
    <string name="prefcat_bltouch">BACKLIGHT ON TOUCHSCREEN</string>
    <string name="pt_bltouch">Backlight on touchscreen</string>
    <string name="pfk_info">Phantom Key Presses Filter module ver. %s\nAuthor Cristoforo Cataldo (Christopher83)</string>
    <string name="prefcat_pfk">PHANTOM KEY PRESSES FILTER</string>
    <string name="pt_home_enabled">Home key filter</string>
    <string name="ps_home_enabled">Ignored key pressed: %s</string>
    <string name="home_allowed_irq_title">Max allowed interrupts</string>
    <string name="home_report_wait_title">Report wait time</string>
    <string name="pt_menuback_enabled">Menu/Back keys filter</string>
    <string name="ps_menuback_enabled">Ignored key pressed: %s</string>
    <string name="menuback_interrupt_checks_title">Interrupts checks</string>
    <string name="menuback_first_err_wait_title">First error wait time</string>
    <string name="menuback_last_err_wait_title">Last error wait time</string>
    <string name="ps_pfk_set_on_boot">If enabled will restore all pkf settings on reboot</string>
    <string name="dynamic_writeback_info">Dynamic Dirty Page Writebacks feature\nAuthor Cristoforo Cataldo (Christopher83)</string>
    <string name="dynamic_write_back_title">DYNAMIC DIRTY PAGE WRITEBACKS</string>
    <string name="pt_dynamic_write_back">Dynamic Dirty Writeback</string>
    <string name="dynamic_writeback_active_title">Dirty Writeback Active centisecs</string>
    <string name="dynamic_writeback_suspend_title">Dirty Writeback Suspend centisecs</string>
    <string name="size_25_mb">25mb</string>
    <string name="size_50_mb">50mb</string>
    <string name="size_75_mb">75mb</string>
    <string name="size_80_mb">80mb</string>
    <string name="size_100_mb">100mb</string>
    <string name="size_128_kb">128kb</string>
    <string name="size_256_kb">256kb</string>
    <string name="size_512_kb">512kb</string>
    <string name="size_1024_kb">1024kb</string>
    <string name="size_2048_kb">2048kb</string>
    <string name="size_4096_kb">4096kb</string>
    <string name="volt_info">ATTENTION!\nBefore activating Set on boot, make sure that the values ​​entered do not exceed limits or risk the phone to freeze.</string>
    <string name="ps_volt_mhz_voltage">" Hz"</string>
    <string name="ps_volt_save">"Save"</string>
    <string name="ps_volt_current_voltage">"Current voltage: "</string>
    <string name="ps_volt_setting_to_apply">"Setting to apply: "</string>
    <string name="pt_volt_control">Voltage control</string>
    <string name="ps_volt_control">Set voltages for each frequency</string>
    <string name="apply_values">Apply values</string>
    <string name="freq">Frequency</string>
    <string name="current">mV current</string>
    <string name="saved">mV saved</string>
    <string name="not_supported">Your kernel does not support voltage control</string>
    <string name="ps_vm_set_on_boot">If enabled will restore all vm settings on reboot</string>
    <string name="dirty_ratio_title">Dirty ratio</string>
    <string name="dirty_ratio_summary">A higher ratio means lower CPU but slower app startups</string>
    <string name="dirty_background_title">Dirty background ratio</string>
    <string name="dirty_expire_title">Dirty expire centisecs</string>
    <string name="dirty_writeback_title">Dirty writeback centisecs</string>
    <string name="min_free_title">Minfree kbytes</string>
    <string name="overcommit_title">Overcommit ratio</string>
    <string name="swappiness_title">Swappiness</string>
    <string name="vfs_title">VFS cache pressure</string>
    <string name="time_in_state">TIME IN STATE</string>
    <string name="unused_cpu_states">UNUSED CPU STATES</string>
    <string name="total_state_time">TOTAL STATE TIME</string>
    <string name="no_states_file_found">No states file found. Are you sure your phone is
        compatible?\n\nIf you are running a custom ROM or kernel, try
        contacting its developer to inform him that the states file is not
        readable.
    </string>
    <string name="deep_sleep">"Deep Sleep"</string>
    <string name="kernel_info">LINUX KERNEL INFORMATION</string>
    <string name="cpu_info">CPU INFORMATION</string>
    <string name="mem_info">MEMORY INFORMATION</string>
    <string name="first_run_title">First check for root</string>
    <string name="su_success_title">Success!</string>
    <string name="su_failed_title">Oops!</string>
    <string name="first_run_message">The application needs to check for root access and
        busybox. Press OK to continue. Cancel if you would not like to grant
        root access.
    </string>
    <string name="su_success_message">Performance Control was able to get root access and
        find busybox. Ready to rock!
    </string>
    <string name="su_cancel_message">You have chosen to not check for root and busybox.
        Most options will not work without root access. Sorry!
    </string>
    <string name="prefcat_wake_controls">Wake controls</string>
    <string name="double_tap_2_wake_title">Double tap 2 wake</string>
    <string name="double_tap_2_wake_summary">Wake your device by double taping the srceen</string>
    <string name="sweep_2_wake_title">Sweep 2 wake</string>
    <string name="sweep_2_wake_summary">Wake your device by double sweeping the srceen from left to right</string>
    <string name="sweep_2_sleep_only_title">Sweep 2 sleep only</string>
    <string name="sweep_2_sleep_only_summary">Sleep your device by sweeping from right to left on botton of the screen</string>
    <string name="power_key_suspend_title">Power key suspend</string>
    <string name="power_key_suspend_summary">Disbale any wake control when using power button to turn screen off. Wake controls will be restored when turn screen on</string>
</resources>