<?xml version="1.0" encoding="utf-8"?><!--
Performance Control - An Android CPU Control application
Copyright (C) 2012  James Roberts

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <PreferenceCategory
        android:key="category_wake_controls"
        android:title="@string/prefcat_wake_controls">

        <CheckBoxPreference
            android:key="dt2w"
            android:title="@string/double_tap_2_wake_title" 
            android:summary="@string/double_tap_2_wake_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="s2w"
            android:title="@string/sweep_2_wake_title" 
            android:summary="@string/sweep_2_wake_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="s2wonly"
            android:title="@string/sweep_2_sleep_only_title" 
            android:summary="@string/sweep_2_sleep_only_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="pkeysuspend"
            android:title="@string/power_key_suspend_title" 
            android:summary="@string/power_key_suspend_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
